--- a/render.yaml
+++ b/render.yaml
@@ -1,22 +1,29 @@
 databases:
-  - name: Glowry
+  - name: Glowry-db      
+    databaseName: glowry_prod
+    user: glowry_user
     plan: free
-    databaseName: mysite
-    user: mysite
 
 services:
   - type: web
-    plan: free
     name: Glowry
     runtime: python
+    plan: free
     buildCommand: './build.sh'
     startCommand: 'python -m gunicorn Glowry.asgi:application -k uvicorn.workers.UvicornWorker'
+
+
+    dependencies:
+      - Glowry-db
+
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: Glowry
+          name: Glowry-db
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
       - key: WEB_CONCURRENCY
         value: 4
+      - key: DEBUG
+        value: false
